# libmoltalk

./: .gitlab-ci.yml  CMakeLists.txt  README.md  index.html  params.json
Code/Cpp/: MTAlPos.hpp.md  MTAlignmentAlgo.hpp.md  MTAlignmentAlgo_-alpha-.md  MTAlignmentAlgo_-omega-.md  MTAlignmentAlgo_access.cpp.md  MTAlignmentAlgo_computeGlobalAlignment.cpp.md  MTAlignmentAlgo_computeLocalAlignment.cpp.md  MTAlignmentAlgo_ctor.cpp.md  MTAlignmentAlgo_dtor.cpp.md  MTAlignmentAlgo_prepare.cpp.md  MTAlignmentAlgo_setters.cpp.md  MTAtom.hpp.md  MTAtomFactory.hpp.md  MTAtomFactory_-alpha-.md  MTAtomFactory_-omega-.md  MTAtomFactory_creation.cpp.md  MTAtomFactory_ctor.cpp.md  MTAtomFactory_dtor.cpp.md  MTAtom_-alpha-.md  MTAtom_-omega-.md  MTAtom_bonds.cpp.md  MTAtom_ctor.cpp.md  MTAtom_dtor.cpp.md  MTAtom_getters.cpp.md  MTAtom_setters.cpp.md  MTAtom_trafo.cpp.md  MTChain.hpp.md  MTChainFactory.hpp.md  MTChainFactory_-alpha-.md  MTChainFactory_creation.cpp.md  MTChainFactory_ctor.cpp.md  MTChainFactory_dtor.cpp.md  MTChain_-alpha-.md  MTChain_-omega-.md  MTChain_access.cpp.md  MTChain_add.cpp.md  MTChain_counts.cpp.md  MTChain_ctor.cpp.md  MTChain_descriptors.cpp.md  MTChain_dtor.cpp.md  (+186 more)
Code/Cpp/tests/: utMTAtom.cpp.md  utMTAtomFactory.cpp.md  utMTChain.cpp.md  utMTChainFactory.cpp.md  utMTCoordinates.cpp.md  utMTDataKV.cpp.md  utMTMatrix.cpp.md  utMTMatrix44.cpp.md  utMTMatrix53.cpp.md  utMTModule.cpp.md  utMTPDBParser.cpp.md  utMTPairwiseSequenceAlignment.cpp.md  utMTQuaternion.cpp.md  utMTResidue.cpp.md  utMTResidueAA.cpp.md  utMTResidueFactory.cpp.md  utMTSelection.cpp.md  utMTStructure.cpp.md  utMTStructureFactory.cpp.md  utMTVector.cpp.md  utMain.cpp.md  utlibmoltalk.md
doc/: README.md
doc/UML/: mtalignment.uml  mtmatrixinterface.uml  mtselection.uml  mtvector.uml  structure_hierarchy.uml
src/Cpp/: .gitignore  CMakeLists.txt  mk_libmoltalk.sh  run_tests.sh
src/Cpp/tests/: CMakeLists.txt
src/Cpp/tests/mocks/: README.md
